# pop-drink

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: README.md  pre-push
.github/workflows/: ci.yml
crates/drink/: README.md
crates/drink/drink/: Cargo.toml
crates/drink/drink-cli/: Cargo.toml
crates/drink/drink-cli/src/app_state/: contracts.rs  mod.rs  user_input.rs
crates/drink/drink-cli/src/executor/: error.rs  mod.rs
crates/drink/drink-cli/src/ui/: current_env.rs  footer.rs  layout.rs  output.rs  user_input.rs
crates/drink/drink/src/: errors.rs  lib.rs  session.rs
crates/drink/drink/src/pallet_contracts_debugging/: intercepting.rs  runtime.rs  tracing.rs
crates/drink/drink/src/session/: bundle.rs  error.rs  mock.rs  record.rs  transcoding.rs
crates/drink/drink/src/session/mock/: contract.rs  error.rs  extension.rs
crates/drink/drink/test-macro/: Cargo.toml
crates/drink/drink/test-macro/src/: lib.rs
crates/drink/examples/chain-extension/: Cargo.toml
crates/drink/examples/chain-extension/src/: lib.rs
crates/drink/examples/contract-events/: Cargo.toml
crates/drink/examples/cross-contract-call-tracing/: Cargo.toml
crates/drink/examples/dry-running/: lib.rs
crates/drink/examples/flipper/: Cargo.toml  lib.rs
crates/drink/examples/mocking/: Cargo.toml  lib.rs
crates/drink/examples/multiple-contracts/: Cargo.toml  lib.rs
crates/drink/examples/quick-start-with-drink/: Cargo.toml  lib.rs
crates/examples/flipper/: Cargo.toml
crates/ink-sandbox/: Cargo.toml
crates/ink-sandbox/src/: api.rs  lib.rs  macros.rs
crates/ink-sandbox/src/api/: assets_api.rs  balances_api.rs  contracts_api.rs  nfts_api.rs  system_api.rs  timestamp_api.rs
crates/pop-drink/: Cargo.toml
crates/pop-drink/src/: error.rs  lib.rs  macros.rs  mock.rs  utils.rs
crates/pop-drink/src/errors/: mod.rs  v0.rs
drink/: Cargo.toml
drink-cli/: Cargo.toml
drink-cli/src/: cli.rs  main.rs
drink-cli/src/app_state/: output.rs  print.rs
drink-cli/src/executor/: contract.rs  mod.rs
drink-cli/src/ui/: contracts.rs  help.rs  mod.rs
drink/src/: errors.rs  lib.rs  sandbox.rs  session.rs
drink/src/pallet_contracts_debugging/: intercepting.rs  runtime.rs  tracing.rs
drink/src/session/: error.rs  mocking_api.rs  record.rs
drink/src/session/mock/: contract.rs  error.rs  extension.rs
drink/test-macro/src/: bundle_provision.rs  contract_building.rs  lib.rs
examples/chain-extension/: Cargo.toml
examples/chain-extension/src/: lib.rs
examples/contract-events/: lib.rs
examples/cross-contract-call-tracing/: lib.rs
examples/dry-running/: lib.rs
examples/flipper/: lib.rs
examples/mocking/: lib.rs
examples/multiple-contracts/: lib.rs
examples/quick-start-with-drink/: README.md  lib.rs
ink-sandbox/: Cargo.toml
ink-sandbox/src/: lib.rs  macros.rs
ink-sandbox/src/api/: assets_api.rs  balance_api.rs  balances_api.rs  contracts_api.rs  system_api.rs
