[workspace]
resolver = "2"
members = [
    "crates/ink-sandbox",
    "crates/drink/drink",
    "crates/drink/drink-cli",
    "crates/drink/drink/test-macro",
    "crates/pop-drink",
]
exclude = ["crates/drink/examples"]

[workspace.package]
edition = "2021"
repository = "https://github.com/r0gue-io/pop-drink"

[workspace.dependencies]
log = { version = "0.4.21" }
anyhow = { version = "1.0.71" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { version = "4.0.0" }
contract-metadata = { version = "4.0.0" }
contract-transcode = { version = "4.0.0" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec-derive = { version = "3.6.9" }
paste = { version = "1.0.7" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale = { package = "parity-scale-codec", version = "3.6.9", features = [
    "derive",
] }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }

# Substrate dependencies
frame-metadata = { version = "16.0.0" }
frame-support = { version = "36.0.0" }
frame-system = { version = "36.1.0" }
pallet-assets = { version = "37.0.0" }
pallet-balances = { version = "37.0.0" }
pallet-contracts = { version = "35.0.0" }
pallet-timestamp = { version = "35.0.0" }
sp-core = { version = "34.0.0" }
sp-externalities = { version = "0.29.0" }
sp-io = { version = "37.0.0" }
sp-runtime-interface = { version = "28.0.0", features = ["std"] }

# Local
drink = { path = "crates/drink/drink" }
ink_sandbox = { path = "crates/ink-sandbox" }
pallet-api = { path = "../pop-node/pallets/api" }
pop-drink = { path = "crates/pop-drink" }
pop-runtime-devnet = { path = "../pop-node/runtime/devnet" }
pop-api = { path = "../pop-node/pop-api" }
