[workspace]
resolver = "2"
members = [
    "crates/ink-sandbox",
    "crates/drink/drink",
    "crates/drink/drink-cli",
    "crates/drink/drink/test-macro",
    "crates/pop-drink",
]
exclude = ["crates/drink/examples"]

[workspace.package]
edition = "2021"
repository = "https://github.com/r0gue-io/pop-drink"

[workspace.dependencies]
log = { version = "0.4.22" }
anyhow = { version = "1.0.81" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { version = "4.0.0" }
contract-metadata = { version = "4.0.0" }
contract-transcode = { version = "4.0.0" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec-derive = { version = "3.6.9" }
paste = { version = "1.0.7" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale = { package = "parity-scale-codec", version = "3.7.4", features = [
    "derive",
] }
scale-info = { version = "2.11.6" }
serde_json = { version = "1.0.132" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }

# Substrate dependencies
frame-metadata = { version = "20.0.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
pallet-nfts = { git = "https://github.com/r0gue-io/pop-node.git" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4" }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-4", features = [
  "std",
] }

# Local
drink = { path = "crates/drink/drink" }
ink_sandbox = { path = "crates/ink-sandbox" }
pop-api = { git = "https://github.com/r0gue-io/pop-node.git" }
pop-drink = { path = "crates/pop-drink" }
pop-runtime-devnet = { git = "https://github.com/r0gue-io/pop-node.git" }
pop-runtime-testnet = { git = "https://github.com/r0gue-io/pop-node.git" }
