[package]
name = "ink_sandbox"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = { version = "16.0.0", default-features = false }
frame-support = { version = "36.0.0", default-features = false }
frame-system = { version = "36.1.0", default-features = false }
pallet-contracts = { version = "35.0.0", default-features = false }
pallet-assets = { version = "37.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
 "derive",
] }
sp-core = { version = "34.0.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-runtime-interface = { version = "28.0.0" }

log = { version = "0.4.21", default-features = false }
paste = { version = "1.0" }
scale-info = { version = "2.11", default-features = false }
wat = { version = "1.207.0" }


[features]
default = [
 # This is required for the runtime-interface to work properly in the std env.
 "std",
]
std = [
 "frame-metadata/std",
 "frame-support/std",
 "frame-system/std",
 "pallet-assets/std",
 "pallet-balances/std",
 "pallet-contracts/std",
 "pallet-timestamp/std",
 "scale/std",
 "scale-info/std",
 "sp-core/std",
 "sp-externalities/std",
 "sp-runtime-interface/std",
 "sp-io/std",
]
