[package]
name = "ink_sandbox"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
paste.workspace = true
scale.workspace = true
scale-info.workspace = true
wat.workspace = true

# Substrate dependencies
frame-metadata.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-contracts.workspace = true
pallet-nfts.workspace = true
pallet-timestamp.workspace = true
sp-core.workspace = true
sp-externalities.workspace = true
sp-io.workspace = true
sp-runtime-interface.workspace = true

[features]
default = [
 # This is required for the runtime-interface to work properly in the std env.
 "std",
]
std = []
