[package]
authors = [ "Aleph Zero Foundation", "Cardinal" ]
edition = "2021"
homepage = "https://alephzero.org"
name = "flipper"
repository = "https://github.com/Cardinal-Cryptography/drink"
version = "0.1.0"

[dependencies]
ink = { version = "=5.0.0", default-features = false, features = [ "ink-debug" ] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.6", default-features = false, features = [ "derive" ], optional = true }

[dev-dependencies]
drink = { path = "../../../crates/pop-drink", package = "pop-drink" }

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
ink-as-dependency = [  ]
std = [
	"drink/std",
	"ink/std",
	"scale-info/std",
	"scale/std",
]
